add support time types from for java.time, java.util and java.sql packages